<resources>
    <string name="app_name">AppPracME7</string>
    <string name="nickname">Nickname</string>
    <string name="fname">Name</string>
    <string name="sname">Surname</string>
    <string name="email">example@gmail.com</string>
    <string name="title">Join Us Now!</string>
    <string name="passwd1">Input your password here</string>
    <string name="passwd2">Repeat your password</string>
    <string name="btnReg">Sign up!</string>
    <string name="btnLogIn">Log In!</string>
    <string name="logNow">Already Have Account?</string>
    <string name="recievermessage">Hello </string>
    <string name="gigachadcat">Giga Chad Cat Supreme</string>
    <string name="redalert">Soviet Power Supreme!</string>
    <string name="cherdenkosurprise">Cherdenko Surprise! :D</string>
    <string name="btnReciever">Confirm Data Arrive!</string>
    <string name="regscreen">Go</string>
    <string name="media_title_hint">Заголовок</string>
    <string name="media_description_text">Описание</string>
    <string name="add_button_text">Добавить</string>
    <string name="media_image_description">Image description</string>
    <string name="default_user_email">user.default@mail.com</string>
    <string name = "default_user_password">useruseruser</string>
</resources>