<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom"
    tools:context=".UI.View.MainActivity">

    <TextView
        android:id="@+id/regscrn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/catgif" />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/nickname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/regscrn"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/regscrn"
        app:layout_constraintTop_toBottomOf="@+id/regscrn" />

    <EditText
        android:id="@+id/name"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/fname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/surname"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/nickname"
        app:layout_constraintTop_toBottomOf="@id/nickname" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/sname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/nickname"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toEndOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/nickname" />

    <EditText
        android:id="@+id/email"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/surname"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <EditText
        android:id="@+id/passwd1"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/passwd1"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <EditText
        android:id="@+id/passwd2"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/passwd2"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/passwd1"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/passwd1"
        app:layout_constraintTop_toBottomOf="@id/passwd1" />

    <!-- Do this TextView Clickable -->

    <Button
        android:id="@+id/btnreg"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/teal_200"
        android:text="Sign up!"
        app:layout_constraintEnd_toEndOf="@+id/passwd2"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/passwd2"
        app:layout_constraintTop_toBottomOf="@id/passwd2" />

    <TextView
        android:id="@+id/logNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/logNow"
        app:layout_constraintEnd_toEndOf="@+id/btnreg"
        app:layout_constraintStart_toStartOf="@+id/btnreg"
        app:layout_constraintTop_toBottomOf="@+id/btnreg" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/catgif"
        android:layout_width="408dp"
        android:layout_height="236dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingClass" />

</androidx.constraintlayout.widget.ConstraintLayout>